テキストファイルの保管先を追加

--- a/cognition.ini
+++ b/cognition.ini
@@ -1,3 +1,4 @@
 #音声ファイルの保管
 [Voiceful]
 VoiceData_filepath = /Applications/python-docker/Chatbot_forOST/complete/voiceful
+Txt_filepath= /Applications/python-docker/Chatbot_forOST/complete/txt
