S3 uploadの動作確認完了。AWS CLIの認証情報でOK.（ローカルフォルダからS3へのアップロードのみ）実行ファイルに組み込み＋envおよびiniファイルに追記。

--- a/cognition.ini
+++ b/cognition.ini
@@ -2,3 +2,10 @@
 [Voiceful]
 VoiceData_filepath = /Applications/python-docker/Chatbot_forOST/complete/voiceful
 Txt_filepath= /Applications/python-docker/Chatbot_forOST/complete/txt
+
+#アップロード用ファイル保管パス
+[S3_upload]
+file_path = /Applications/python-docker/テスト配置物/test.txt
+s3Key = UploadTest/test.txt
+
+
