ページに音声ファイルを保存＋S3へのアップロード処理を追加。動作確認OK

--- a/cognition.ini
+++ b/cognition.ini
@@ -7,5 +7,5 @@ Txt_filepath= /Applications/python-docker/Chatbot_forOST/complete/txt
 [S3_upload]
 file_path = /Applications/python-docker/テスト配置物/test.txt
 s3Key = UploadTest/test.txt
-
+s3Voicefile = UploadTest/
 
